# x11-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt
engine/include/x11engine/: application.hpp  camera.hpp  color.hpp  engine.hpp  frame.hpp  input.hpp  math.hpp  objects.hpp  player.hpp  renderer.hpp
engine/src/: app.cpp  camera.cpp  engine.cpp  frame.cpp  input.cpp  objects.cpp  player.cpp  renderer.cpp
include/: app.hpp  camera.hpp  color.hpp  engine.hpp  frame.hpp  input.hpp  math.hpp  objects.hpp  objects3d.hpp  renderer.hpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
src/: CMakeLists.txt  main.cpp
